# semy

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  SemyConfig.cmake.in  configure.ac  semy-cli.c  semy.1  semy.c  semy.h  semy.pc.in  tablegen.py
.github/workflows/: build.yml
tests/: .gitignore  CMakeLists.txt  fuzz.c  run-afl-fuzz.sh  run-clang-sanitizers.sh  run-coverage-check.sh  semver.dict  test_cli_compare.c  test_cli_decompose.c  test_cli_help.c  test_cli_misc.c  test_cli_sort.c  test_cli_utils.c  test_cli_validate.c  test_cli_version.c  test_compare.c  test_parse.c  test_utils.h
tests/corpus/: 10.txt  101.txt  102.txt  105.txt  106.txt  107.txt  108.txt  11.txt  110.txt  112.txt  115.txt  117.txt  118.txt  119.txt  12.txt  122.txt  126.txt  128.txt  129.txt  13.txt  130.txt  131.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  23.txt  25.txt  27.txt  28.txt  3.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  (+48 more)
